// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the expected classes 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
  margin-left: 2.857142857142857rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c3 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-bottom-left-radius: 1.1428571428571428rem;
  border-bottom-right-radius: 1.1428571428571428rem;
}

.c3:hover {
  background-color: #f8f8f8;
}

.c1 {
  border-top: 0.07142857142857142rem #eee solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      this is the leading message
    </div>
    <div
      class="c2"
    >
      <div
        class="firstChild"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="secondChild"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="thirdChild"
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected classes when there is no leading message 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 18.428571428571427rem;
  margin-left: 2.857142857142857rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-bottom-left-radius: 1.1428571428571428rem;
  border-bottom-right-radius: 1.1428571428571428rem;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem #eee solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      <div
        class="firstChild"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="secondChild"
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected classes when there is only one child 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
  margin-left: 2.857142857142857rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-bottom-left-radius: 1.1428571428571428rem;
  border-bottom-right-radius: 1.1428571428571428rem;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  border-top: 0.07142857142857142rem #eee solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      this is the leading message
    </div>
    <div
      class="c2"
    >
      <div
        class="onlyChild"
      />
    </div>
  </div>
</div>
`;
